--- a/src/statics/css/home.scss
+++ b/src/statics/css/home.scss
@@ -1,12 +1,13 @@
 /* INITIAL SETUP */
+@use "./colors.scss";
+
 #left-col {
     width: 25% !important;
-    background-color: #aaa;
+    background-color: colors.$darker-gray;
     position: relative;
     width: 100%;
     float: left;
     clear: both;
-    border-left: 1px solid #ebebeb;
     min-height: 100vh;
 }
 
@@ -16,8 +17,8 @@
     width: 100%;
     float: left;
     clear: both;
-    border-left: 1px solid #ebebeb;
     min-height: 100vh;
+    background-color: colors.$light-pink;
 }
 
 .container-fluid {
@@ -34,6 +35,11 @@
     position: absolute;
     top: 0;
     left: 0;  
+
+    path {
+        fill: colors.$darker-pink;
+        stroke: white;
+    }
 }
 
 /* HOME */
@@ -42,10 +48,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 90%;
+    width: 70%;
     margin: 0 5%;
     text-align: center !important;
-    height: 300px !important;
 }
 
 .my-details {
@@ -53,6 +58,17 @@
     position: relative; 
     top: 30%;
     text-align: left;
+    font-family: 'Roboto Slab', serif;
+
+    h1 {
+        font-size: 60px;
+        font-weight: bolder;
+    }
+
+    p {
+        font-size: 20px;
+        color: colors.$darker-gray;
+    }
 }
 
 #avatar-col {
@@ -61,8 +77,8 @@
 }
 
 .avatar {
-    min-width: 300px;
-    min-height: 300px;
+    min-width: 80%;
+    min-height: 100%;
     position: relative;
     border-radius: 100%;
     margin: 0 5% !important;
@@ -84,14 +100,34 @@
 
 /* NAV */
 .nav-list {
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    margin: 0;
+    text-align: center !important;
 
-    /* transform: translate(-50%, -50%); */
-}
+    a.inactive {
+        list-style: none;
+        display: block;
+        text-align: left;
+        font-size: 25px;
+        margin: 4% 0;
+        color: colors.$inactive-link !important;
+        text-decoration: none;
+    }
 
-.nav-list-item {
-    list-style: none;
-    text-align: left;
-    font-size: 20px;
+    a.active {
+        list-style: none;
+        display: block;
+        text-align: left;
+        font-size: 25px;
+        margin: 4% 0;
+        color: colors.$active-link !important;
+        text-decoration: none;
+    }
 }
 
 .nav-list-item span {
