--- a/src/statics/css/home.scss
+++ b/src/statics/css/home.scss
@@ -23,7 +23,8 @@
 
 .container-fluid {
     width: 100%;
-    height: auto;
+    height: 100%;
+    overflow: hidden;
     clear: both;
     float: left;
     position: relative;
@@ -40,6 +41,17 @@
         fill: colors.$darker-pink;
         stroke: white;
     }
+}
+
+#footer {
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    width: 100%;
+    margin: 0 2%;
+    text-align: right !important;
+    color: colors.$darker-gray;
+    font-weight: bold;
 }
 
 /* HOME */
@@ -108,6 +120,7 @@
     width: 70%;
     margin: 0;
     text-align: center !important;
+    z-index: 2000 !important;
 
     a.inactive {
         list-style: none;
