home page is pretty much done, including responsive styling

--- a/src/statics/css/colors.scss
+++ b/src/statics/css/colors.scss
@@ -1,5 +1,7 @@
+// COLORS
 $light-pink: #f5edf4;
 $darker-pink: #e0ccdd;
 $darker-gray: #6b656a;
 $inactive-link: #bbb;
 $active-link: #fff;
+$hover-link: #ddd;
