--- a/src/statics/css/home.scss
+++ b/src/statics/css/home.scss
@@ -1,14 +1,22 @@
 /* INITIAL SETUP */
 @use "./colors.scss";
+@use "./breakpoints.scss";
+
+#main-row {
+    padding: 0 !important;
+    margin: 0 !important;
+}
 
 #left-col {
+    padding: 0 !important;
     width: 25% !important;
     background-color: colors.$darker-gray;
     position: relative;
     width: 100%;
     float: left;
     clear: both;
-    min-height: 100vh;
+    height: 100vh;
+    z-index: 2000 !important;
 }
 
 #right-col {
@@ -17,13 +25,16 @@
     width: 100%;
     float: left;
     clear: both;
-    min-height: 100vh;
+    height: 100vh;
+    margin: 0 !important;
+    padding: 0 !important;
     background-color: colors.$light-pink;
 }
 
 .container-fluid {
     width: 100%;
     height: 100%;
+    padding: 0 !important;
     overflow: hidden;
     clear: both;
     float: left;
@@ -52,6 +63,7 @@
     text-align: right !important;
     color: colors.$darker-gray;
     font-weight: bold;
+    font-size: 1vw;
 }
 
 /* HOME */
@@ -73,12 +85,12 @@
     font-family: 'Roboto Slab', serif;
 
     h1 {
-        font-size: 60px;
+        font-size: 4vw;
         font-weight: bolder;
     }
 
     p {
-        font-size: 20px;
+        font-size: 1.5vw;
         color: colors.$darker-gray;
     }
 }
@@ -86,6 +98,7 @@
 #avatar-col {
     height: 300px;
     width: 200px !important;
+    padding: 0 !important;
 }
 
 .avatar {
@@ -110,39 +123,166 @@
     border-radius: 50%;
 }
 
-/* NAV */
-.nav-list {
-    color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 70%;
-    margin: 0;
-    text-align: center !important;
-    z-index: 2000 !important;
+@media (max-width: breakpoints.$laptop-1250) {
+    #avatar-col {
+        height: 250px;
+    }   
 
-    a.inactive {
-        list-style: none;
-        display: block;
-        text-align: left;
-        font-size: 25px;
-        margin: 4% 0;
-        color: colors.$inactive-link !important;
-        text-decoration: none;
-    }
-
-    a.active {
-        list-style: none;
-        display: block;
-        text-align: left;
-        font-size: 25px;
-        margin: 4% 0;
-        color: colors.$active-link !important;
-        text-decoration: none;
+    .avatar {
+        width: 85%;
+        margin: 0 !important;
     }
 }
 
-.nav-list-item span {
-    padding-left: 5% !important;
+@media (max-width: breakpoints.$laptop-1000) {
+    .home-details {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center !important;
+    }
+
+    #avatar-col {
+        flex: auto;
+        display: block !important;
+        width: 100% !important;
+    }
+    
+    .avatar-img {
+        width: 70%;
+        margin: 0 15%;
+        text-align: center;
+    }
+
+    #details-col {
+        flex: auto;
+        display: block !important;
+        width: 100%;
+        margin: 0 15%;
+    }
+
+    .my-details {
+        text-align: center;
+    }
+
+    .avatar {
+        width: 100% !important;
+        margin: 0;
+    }
+}
+
+
+@media (max-width: breakpoints.$tablet) {
+    #main-row {
+        width: 100% !important;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center !important;
+    }
+
+    #left-col {
+        display: block !important;
+        width: 100% !important; 
+        // background-color: colors.$darker-pink;
+        height: 10vh !important;
+    }
+
+    #right-col {
+        width: 100% !important;
+        flex: auto;
+        display: block !important;
+    }
+
+    #background-wave {
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        left: 0;  
+    
+        path {
+            fill: colors.$darker-pink;
+            stroke: white;
+        }
+    }
+
+    .home-details {
+        width: 100% !important;
+    }
+
+    #details-col {
+        padding: 0 !important;
+        margin: 0 !important;
+        width: 100% !important;
+    }
+
+    .my-details {
+        width: 100% !important;
+        
+        h1 {
+            font-size: 6vw;
+            font-weight: bolder;
+        }
+    
+        p {
+            font-size: 3vw;
+            color: colors.$darker-gray;
+        }
+    }
+
+    .avatar {
+        margin: 0 !important;
+        width: 100% !important;
+    }
+
+    #avatar-col {
+        height: 300px;
+    }   
+
+    .avatar-img {
+        width: 40%;
+        height: 100%;
+        margin: 0 30%;
+        text-align: center;
+    }
+
+    #footer {
+        font-size: 2vw;
+    }
+}
+
+@media (max-width: breakpoints.$tablet-min) {
+    #avatar-col {
+        height: 200px;
+    }   
+
+    .avatar {
+        margin: 0 !important;
+        width: 100% !important;
+
+    }
+
+    .avatar-img {
+        width: 40%;
+        height: 100%;
+        margin: 0 30%;
+        text-align: center;
+    }
+}
+
+@media (max-width: breakpoints.$phone) {
+    #avatar-col {
+        height: 30vh;
+    }  
+
+    .avatar {
+        margin: 0 !important;
+        width: 100% !important;
+
+    }
+
+    .avatar-img {
+        width: 70%;
+        height: 100%;
+        margin: 0 15%;
+        text-align: center;
+    }
 }
