animation on home screen

--- a/src/statics/css/colors.scss
+++ b/src/statics/css/colors.scss
@@ -1,7 +1,9 @@
 // COLORS
 $light-pink: #f5edf4;
 $darker-pink: #e0ccdd;
+$darkest-pink: #a390a0;
 $darker-gray: #6b656a;
+$darkest-gray: #3d393c;
 $inactive-link: #bbb;
 $active-link: #fff;
 $hover-link: #ddd;
