--- a/src/statics/css/nav.scss
+++ b/src/statics/css/nav.scss
@@ -5,11 +5,7 @@
 .nav-list {
     color: white;
     display: block;
-    // margin: 0;
-    // text-align: center !important;
-    // z-index: 2000 !important;
-    // height: 100vh;
-    margin: 50% 0;
+    margin: 50% 20%;
 
     a.inactive {
         width: 100% !important;
