--- a/src/statics/css/breakpoints.scss
+++ b/src/statics/css/breakpoints.scss
@@ -3,6 +3,7 @@ $laptop-min-width: 769px; //Small screens, laptops
 $laptop-1250: 1250px; //Small screens, laptops
 $laptop-1000: 1000px; //Small screens, laptops
 $tablet: 800px;
+$tablet-700: 700px;
 $tablet-min: 600px;
 $phone: 400px
 
