--- a/src/statics/css/home.scss
+++ b/src/statics/css/home.scss
@@ -7,6 +7,11 @@
     margin: 0 !important;
 }
 
+.row, .col-12  {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
 #left-col {
     padding: 0 !important;
     width: 25% !important;
@@ -91,13 +96,15 @@
     }
 
     p {
-        font-size: 1.5vw;
+        font-size: 18px;
         color: colors.$darker-gray;
     }
+}
 
-    #smaller {
-        font-size: 1vw;
-    }
+#smaller {
+    font-family: 'Roboto Slab', serif;
+    margin-top: 8% !important;
+    font-size: 22px;
 }
 
 #avatar-col {
@@ -190,10 +197,22 @@
         display: block !important;
         width: 100% !important;
     }
+
+    #gradient {
+        position: relative;
+        height: 100% !important;
+        width: 50%;
+        margin: 0 25%;
+    }
+
+    h6#smaller {
+        margin-top: 10% !important;
+        font-size: 18px;
+    }
     
     .avatar-img {
-        width: 70%;
-        margin: 0 15%;
+        width: 92%;
+        margin: 0%;
         text-align: center;
     }
 
@@ -206,6 +225,11 @@
 
     .my-details {
         text-align: center;
+
+        p {
+            margin-top: 0% !important;
+            font-size: 14px;
+        }
     }
 
     .avatar {
@@ -248,27 +272,32 @@
         }
     }
 
+    .add-padding-when-smaller {
+        padding: 0 10% !important;
+    }
+
     .home-details {
         width: 100% !important;
+        margin-bottom: 20% !important;
     }
 
     #details-col {
-        padding: 0 !important;
         margin: 0 !important;
+        padding: 0 !important;
         width: 100% !important;
     }
 
     .my-details {
         width: 100% !important;
+        padding: 0 10% !important;
         
         h1 {
             font-size: 6vw;
             font-weight: bolder;
         }
-    
+
         p {
-            font-size: 3vw;
-            color: colors.$darker-gray;
+            font-size: 16px;
         }
     }
 
@@ -279,54 +308,110 @@
 
     #avatar-col {
         height: 300px;
-    }   
-
-    .avatar-img {
+    }  
+    
+    #gradient {
+        position: relative;
+        height: 100% !important;
         width: 40%;
-        height: 100%;
         margin: 0 30%;
+    }
+    
+    .avatar-img {
+        width: 92%;
+        margin: 0%;
         text-align: center;
     }
 
     #footer {
         font-size: 2vw;
     }
+
+    h6#smaller {
+        margin-top: 10% !important;
+        padding: 0 10% !important;
+    }
+}
+
+@media (max-width: breakpoints.$tablet-700) {
+    #gradient {
+        position: relative;
+        height: 100% !important;
+        width: 40%;
+        margin: 0 30%;
+    }
+    
+    .avatar-img {
+        width: 92%;
+        margin: 0%;
+        text-align: center;
+    }
+
+    #avatar-col {
+        height: 250px;
+    }  
+
+    #smaller {
+        margin-top: 5% !important;
+    }
+    
 }
 
 @media (max-width: breakpoints.$tablet-min) {
+    #gradient {
+        position: relative;
+        height: 100% !important;
+        width: 40%;
+        margin: 0 30%;
+    }
+    
+    .avatar-img {
+        width: 92%;
+        margin: 0% !important;
+        text-align: center;
+    }
+
     #avatar-col {
-        height: 200px;
-    }   
+        height: 225px;
+    }  
+
+    #smaller {
+        margin-top: 5% !important;
+    } 
 
     .avatar {
         margin: 0 !important;
         width: 100% !important;
 
-    }
-
-    .avatar-img {
-        width: 40%;
-        height: 100%;
-        margin: 0 30%;
-        text-align: center;
     }
 }
 
 @media (max-width: breakpoints.$phone) {
     #avatar-col {
-        height: 30vh;
+        height: 225px;
     }  
 
-    .avatar {
-        margin: 0 !important;
-        width: 100% !important;
-
+    #gradient {
+        position: relative;
+        height: 100% !important;
+        width: 60%;
+        margin: 0 20%;
     }
 
     .avatar-img {
-        width: 70%;
-        height: 100%;
+        width: 92%;
+        height: 92%;
         margin: 0 15%;
         text-align: center;
+    }
+
+    .my-details {
+        p {
+            font-size: 12px;
+        }
+    }
+
+    #smaller {
+        font-size: 12px;
     }
 }
