about me and responsive styling for about me and nav

--- a/src/statics/css/breakpoints.scss
+++ b/src/statics/css/breakpoints.scss
@@ -2,10 +2,11 @@
 $laptop-min-width: 769px; //Small screens, laptops
 $laptop-1250: 1250px; //Small screens, laptops
 $laptop-1000: 1000px; //Small screens, laptops
-$tablet: 800px;
+$laptop-850: 850px; //Small screens, laptops
+$tablet: 768px;
 $tablet-700: 700px;
 $tablet-min: 600px;
-$phone: 400px
+$phone: 450px
 
 
 // 320px — 480px: Mobile devices
