--- a/src/statics/css/home.scss
+++ b/src/statics/css/home.scss
@@ -1,66 +1,10 @@
 /* INITIAL SETUP */
 @use "./colors.scss";
 @use "./breakpoints.scss";
-
-#main-row {
-    padding: 0 !important;
-    margin: 0 !important;
-}
-
-.row, .col-12  {
-    padding: 0 !important;
-    margin: 0 !important;
-}
-
-#left-col {
-    padding: 0 !important;
-    width: 25% !important;
-    background-color: colors.$darker-gray;
-    position: relative;
-    width: 100%;
-    float: left;
-    clear: both;
-    height: 100vh;
-    z-index: 2000 !important;
-}
-
-#right-col {
-    width: 75% !important;
-    position: relative;
-    width: 100%;
-    float: left;
-    clear: both;
-    height: 100vh;
-    margin: 0 !important;
-    padding: 0 !important;
-    background-color: colors.$light-pink;
-}
-
-.container-fluid {
-    width: 100%;
-    height: 100%;
-    padding: 0 !important;
-    overflow: hidden;
-    clear: both;
-    float: left;
-    position: relative;
-}
-
-
-#background-wave {
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    left: 0;  
-
-    path {
-        fill: colors.$darker-pink;
-        stroke: white;
-    }
-}
+@import "~animate.css/animate.css";
 
 #footer {
-    position: absolute;
+    position: fixed;
     bottom: 0%;
     right: 0%;
     width: 100%;
@@ -73,29 +17,40 @@
 
 
 /* HOME */
+.home {
+    display: block !important;
+    position: relative;
+    height: 100vh !important;
+}
+
 .home-details {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 45%;
     transform: translate(-50%, -50%);
-    width: 70%;
-    margin: 0 5%;
-    text-align: center !important;
+    width: 90%;
+    margin: 0;
 }
 
 .my-details {
     vertical-align: middle !important;
     position: relative; 
-    top: 30%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
     text-align: left;
     font-family: 'Roboto Slab', serif;
+    color: colors.$darkest-gray;
 
     h1 {
         font-size: 4vw;
+        display: block;
         font-weight: bolder;
     }
 
     p {
+        display: block;
         font-size: 18px;
         color: colors.$darker-gray;
     }
@@ -108,18 +63,23 @@
 }
 
 #avatar-col {
-    height: 300px;
-    width: 200px !important;
-    padding: 0 !important;
+    height: 350px;
+    width: 100% !important;
+    padding: 0 5% 0 0 !important;
+    // position: relative; 
+    // text-align: right !important;
+    font-family: 'Roboto Slab', serif;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .avatar {
-    width: 80%;
+    width: 55% !important;
     height: 100%;
-    position: relative;
-    // border-radius: 100%;
-    margin: 0 5% !important;
-    text-align: left;
+    position: relative; 
+    top: 50%;
+    left: 30%;
+    transform: translate(-50%, -50%);
 }
 
 @keyframes rotate {
@@ -151,16 +111,16 @@
     bottom: 4%;
     left: 4%;
     right: 4%;
-    background-image: url('../images/sivan.jpg') !important;
+    background-image: url('../images/sivan_adler.jpg') !important;
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: cover;
-    border-radius: 50%;
+    border-radius: 100%;
     padding: 2% !important;
 }
 
 #gradient {
-    border-radius: 50%;
+    border-radius: 100%;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -174,253 +134,253 @@
     box-shadow: 10px 6px 24px -7px rgba(0,0,0,0.51);
 }
 
-@media (max-width: breakpoints.$laptop-1250) {
-    #avatar-col {
-        height: 250px;
-    }   
+// @media (max-width: breakpoints.$laptop-1250) {
+//     #avatar-col {
+//         height: 250px;
+//     }   
 
-    .avatar {
-        width: 85%;
-        margin: 0 !important;
-    }
-}
+//     .avatar {
+//         width: 85%;
+//         margin: 0 !important;
+//     }
+// }
 
-@media (max-width: breakpoints.$laptop-1000) {
-    .home-details {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center !important;
-    }
+// @media (max-width: breakpoints.$laptop-1000) {
+//     .home-details {
+//         display: flex;
+//         flex-wrap: wrap;
+//         justify-content: center !important;
+//     }
 
-    #avatar-col {
-        flex: auto;
-        display: block !important;
-        width: 100% !important;
-    }
+//     #avatar-col {
+//         flex: auto;
+//         display: block !important;
+//         width: 100% !important;
+//     }
 
-    #gradient {
-        position: relative;
-        height: 100% !important;
-        width: 50%;
-        margin: 0 25%;
-    }
+//     #gradient {
+//         position: relative;
+//         height: 100% !important;
+//         width: 50%;
+//         margin: 0 25%;
+//     }
 
-    h6#smaller {
-        margin-top: 10% !important;
-        font-size: 18px;
-    }
+//     h6#smaller {
+//         margin-top: 10% !important;
+//         font-size: 18px;
+//     }
     
-    .avatar-img {
-        width: 92%;
-        margin: 0%;
-        text-align: center;
-    }
+//     .avatar-img {
+//         width: 92%;
+//         margin: 0%;
+//         text-align: center;
+//     }
 
-    #details-col {
-        flex: auto;
-        display: block !important;
-        width: 100%;
-        margin: 0 15%;
-    }
+//     #details-col {
+//         flex: auto;
+//         display: block !important;
+//         width: 100%;
+//         margin: 0 15%;
+//     }
 
-    .my-details {
-        text-align: center;
+//     .my-details {
+//         text-align: center;
 
-        p {
-            margin-top: 0% !important;
-            font-size: 14px;
-        }
-    }
+//         p {
+//             margin-top: 0% !important;
+//             font-size: 14px;
+//         }
+//     }
 
-    .avatar {
-        width: 100% !important;
-        margin: 0;
-    }
-}
+//     .avatar {
+//         width: 100% !important;
+//         margin: 0;
+//     }
+// }
 
-@media (max-width: breakpoints.$laptop-850) {
-    #gradient {
-        width: 60%;
-    }
-}
+// @media (max-width: breakpoints.$laptop-850) {
+//     #gradient {
+//         width: 60%;
+//     }
+// }
 
 
-@media (max-width: breakpoints.$tablet) {
-    #main-row {
-        width: 100% !important;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center !important;
-    }
+// @media (max-width: breakpoints.$tablet) {
+//     #main-row {
+//         width: 100% !important;
+//         display: flex;
+//         flex-wrap: wrap;
+//         justify-content: center !important;
+//     }
 
-    #left-col {
-        display: block !important;
-        width: 100% !important; 
-        height: 10vh !important;
-    }
+//     #left-col {
+//         display: block !important;
+//         width: 100% !important; 
+//         height: 10vh !important;
+//     }
 
-    #right-col {
-        width: 100% !important;
-        flex: auto;
-        display: block !important;
-    }
+//     #right-col {
+//         width: 100% !important;
+//         flex: auto;
+//         display: block !important;
+//     }
 
-    #background-wave {
-        display: inline-block;
-        position: absolute;
-        top: 0;
-        left: 0;  
+//     #background-wave {
+//         display: inline-block;
+//         position: absolute;
+//         top: 0;
+//         left: 0;  
     
-        path {
-            fill: colors.$darker-pink;
-            stroke: white;
-        }
-    }
+//         path {
+//             fill: colors.$darker-pink;
+//             stroke: white;
+//         }
+//     }
 
-    .add-padding-when-smaller {
-        padding: 0 10% !important;
-    }
+//     .add-padding-when-smaller {
+//         padding: 0 10% !important;
+//     }
 
-    .home-details {
-        width: 100% !important;
-        margin-bottom: 20% !important;
-    }
+//     .home-details {
+//         width: 100% !important;
+//         margin-bottom: 20% !important;
+//     }
 
-    #details-col {
-        margin: 0 !important;
-        padding: 0 !important;
-        width: 100% !important;
-    }
+//     #details-col {
+//         margin: 0 !important;
+//         padding: 0 !important;
+//         width: 100% !important;
+//     }
 
-    .my-details {
-        width: 100% !important;
-        padding: 0 10% !important;
+//     .my-details {
+//         width: 100% !important;
+//         padding: 0 10% !important;
         
-        h1 {
-            font-size: 6vw;
-            font-weight: bolder;
-        }
+//         h1 {
+//             font-size: 6vw;
+//             font-weight: bolder;
+//         }
 
-        p {
-            font-size: 16px;
-        }
-    }
+//         p {
+//             font-size: 16px;
+//         }
+//     }
 
-    .avatar {
-        margin: 0 !important;
-        width: 100% !important;
-    }
+//     .avatar {
+//         margin: 0 !important;
+//         width: 100% !important;
+//     }
 
-    #avatar-col {
-        height: 300px;
-    }  
+//     #avatar-col {
+//         height: 300px;
+//     }  
     
-    #gradient {
-        position: relative;
-        height: 100% !important;
-        width: 40%;
-        margin: 0 30%;
-    }
+//     #gradient {
+//         position: relative;
+//         height: 100% !important;
+//         width: 40%;
+//         margin: 0 30%;
+//     }
     
-    .avatar-img {
-        width: 92%;
-        margin: 0%;
-        text-align: center;
-    }
+//     .avatar-img {
+//         width: 92%;
+//         margin: 0%;
+//         text-align: center;
+//     }
 
-    #footer {
-        font-size: 2vw;
-    }
+//     #footer {
+//         font-size: 2vw;
+//     }
 
-    h6#smaller {
-        margin-top: 10% !important;
-        padding: 0 10% !important;
-    }
-}
+//     h6#smaller {
+//         margin-top: 10% !important;
+//         padding: 0 10% !important;
+//     }
+// }
 
-@media (max-width: breakpoints.$tablet-700) {
-    #gradient {
-        position: relative;
-        height: 100% !important;
-        width: 40%;
-        margin: 0 30%;
-    }
+// @media (max-width: breakpoints.$tablet-700) {
+//     #gradient {
+//         position: relative;
+//         height: 100% !important;
+//         width: 40%;
+//         margin: 0 30%;
+//     }
     
-    .avatar-img {
-        width: 92%;
-        margin: 0%;
-        text-align: center;
-    }
+//     .avatar-img {
+//         width: 92%;
+//         margin: 0%;
+//         text-align: center;
+//     }
 
-    #avatar-col {
-        height: 250px;
-    }  
+//     #avatar-col {
+//         height: 250px;
+//     }  
 
-    #smaller {
-        margin-top: 5% !important;
-    }
+//     #smaller {
+//         margin-top: 5% !important;
+//     }
     
-}
+// }
 
-@media (max-width: breakpoints.$tablet-min) {
-    .home-details {
-        top: 45%;
+// @media (max-width: breakpoints.$tablet-min) {
+//     .home-details {
+//         top: 45%;
 
-    }
-    #gradient {
-        position: relative;
-        height: 100% !important;
-        width: 40%;
-        margin: 0 30%;
-    }
+//     }
+//     #gradient {
+//         position: relative;
+//         height: 100% !important;
+//         width: 40%;
+//         margin: 0 30%;
+//     }
     
-    .avatar-img {
-        width: 92%;
-        margin: 0% !important;
-        text-align: center;
-    }
+//     .avatar-img {
+//         width: 92%;
+//         margin: 0% !important;
+//         text-align: center;
+//     }
 
-    #avatar-col {
-        height: 225px;
-    }  
+//     #avatar-col {
+//         height: 225px;
+//     }  
 
-    #smaller {
-        margin-top: 5% !important;
-    } 
+//     #smaller {
+//         margin-top: 5% !important;
+//     } 
 
-    .avatar {
-        margin: 0 !important;
-        width: 100% !important;
+//     .avatar {
+//         margin: 0 !important;
+//         width: 100% !important;
 
-    }
-}
+//     }
+// }
 
-@media (max-width: breakpoints.$phone) {
-    #avatar-col {
-        height: 225px;
-    }  
+// @media (max-width: breakpoints.$phone) {
+//     #avatar-col {
+//         height: 225px;
+//     }  
 
-    #gradient {
-        position: relative;
-        height: 100% !important;
-        width: 60%;
-        margin: 0 20%;
-    }
+//     #gradient {
+//         position: relative;
+//         height: 100% !important;
+//         width: 60%;
+//         margin: 0 20%;
+//     }
 
-    .avatar-img {
-        width: 92%;
-        height: 92%;
-        margin: 0 15%;
-        text-align: center;
-    }
+//     .avatar-img {
+//         width: 92%;
+//         height: 92%;
+//         margin: 0 15%;
+//         text-align: center;
+//     }
 
-    .my-details {
-        p {
-            font-size: 12px;
-        }
-    }
+//     .my-details {
+//         p {
+//             font-size: 12px;
+//         }
+//     }
 
-    #smaller {
-        font-size: 12px;
-    }
-}
+//     #smaller {
+//         font-size: 12px;
+//     }
+// }
